<resources>
    <string name="app_name">V2access</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_scene_home">Home</string>
    <string name="navigation_drawer_scene_accounts">Accounts</string>
    <string name="navigation_drawer_scene_devices">Devices</string>
    <string name="navigation_drawer_scene_history">History</string>
    <string name="navigation_drawer_scene_faq">Faq</string>
    <string name="navigation_drawer_scene_settings">Settings</string>
    <string name="logo_description">V2Verify Logo</string>
    <string name="powered_by_validvoice">Powered By V2verify&lt;sup&gt;&lt;small&gt;TM&lt;/small&gt;&lt;/sup&gt;</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_record_audio_permission">This application cannot run because it does not have the record audio permission. The application will now exit.</string>
    <string name="audio_permission_rationale">Access to the microphone is needed to enroll and verify users.</string>
    <string name="close">Close</string>
    <string name="understand">I Understand</string>
    <string name="action_delete_label">"Delete %s"</string>
    <string name="action_delete_message">"Are you sure you want to delete '%s'?"</string>
    <string name="scene_capture_permission_camera_rationale">Access to the camera is needed to read QR codes</string>
    <string name="scene_capture_no_camera_permission">This application cannot run because it does not have the camera permission.  The application will return to the home now.</string>
    <string name="scene_capture_low_storage_error">Barcode detector dependencies cannot be downloaded due to low device storage</string>
    <string name="scene_capture_not_our_barcode">Not a Voxidem QR Code</string>
    <string name="scene_capture_invalid_enroll_barcode">Voxidem expected an Enrollment Qr Code. Got a Verify Qr Code.</string>
    <string name="scene_capture_invalid_verify_barcode">Voxidem expected a Verification Qr Code. Got an Enroll Qr Code.</string>
    <string name="scene_capture_invalid_unknown_barcode">Invalid Voxidem Qr Code.</string>
    <string name="scene_user_setup_content_description">image</string>
    <string name="scene_user_setup_display">Device Setup</string>
    <string name="scene_user_setup_new_user">New User</string>
    <string name="scene_user_setup_continue_user">Continue User Enrollment</string>
    <string name="scene_user_setup_existing_user">Existing User</string>
    <string name="scene_user_setup_capture_code">Capture Code</string>
    <string name="scene_user_new_first_name_hint">First Name</string>
    <string name="scene_user_new_last_name_hint">Last Name</string>
    <string name="scene_user_new_user_name_hint">Username</string>
    <string name="scene_user_new_gender_hint"> Gender</string>
    <string name="scene_user_new_language_hint">Vocal Language</string>
    <string name="scene_user_new_primary_phone_hint">Primary Phone</string>
    <string name="scene_user_new_email_address_hint">E-Mail Address</string>
    <string name="scene_user_new_trainer_pin_hint">Training Token</string>
    <string name="scene_user_new_submit">Submit</string>
    <string name="scene_user_new_begin">Begin</string>
    <string name="scene_user_new_first_name_error">First Name is required</string>
    <string name="scene_user_new_last_name_error">Last Name is required</string>
    <string name="scene_user_new_user_name_error">User Name is required</string>
    <string name="scene_user_new_user_name_limit_error">User Name is out of range. Min Length: 5. Max Length: 16</string>
    <string name="scene_user_new_user_name_invalid_error">User Name uses illegal characters</string>
    <string name="scene_user_new_user_name_found_error">User Name is already in use</string>
    <string name="scene_user_new_vocal_gender_error">Vocal Gender is required</string>
    <string name="scene_user_new_vocal_language_error">Vocal Language is required</string>
    <string name="scene_user_new_vocal_language_unsupported_error">Vocal Language is unsupported</string>
    <string name="scene_user_new_primary_phone_error">Phone Number is required</string>
    <string name="scene_user_new_primary_phone_invalid_error">Phone Number is invalid</string>
    <string name="scene_user_new_primary_phone_found_error">Phone Number is already in use</string>
    <string name="scene_user_new_email_address_error">E-Mail Address is required</string>
    <string name="scene_user_new_error">There was a Network Connection Problem. Please Try Again.</string>
    <string name="scene_user_new_email_address_invalid_error">E-Mail Address is invalid</string>
    <string name="scene_user_new_email_address_found_error">E-Mail Address is already in use</string>
    <string name="scene_user_new_trainer_pin_error">Trainer PIN is required</string>
    <string name="scene_user_new_trainer_pin_invalid_error">Trainer PIN MUST be 6 digits</string>
    <string name="scene_user_existing_username_hint">Login Credential</string>
    <string name="scene_user_existing_username_login">Enter Login Credential to Start Session</string>
    <string name="scene_user_existing_username_empty_error">Credential  is required</string>
    <string name="scene_user_existing_username_not_exist_error">Login Credential does not exist</string>
    <string name="action_login">Start</string>
    <string name="scene_user_enroll">Enter Training Token to Re-enroll</string>
    <string name="scene_token_enroll">Training Token</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="scene_home_action_refresh">Refresh</string>
    <string name="scene_home_swipe_to_refresh">Swipe down to refresh</string>
    <string name="scene_home_device_add_nickname_hint">Device Nickname</string>
    <string name="scene_home_device_add_nickname_exists_error">Nickname already exists</string>
    <string name="scene_home_device_add_nickname_error">Nickname is required</string>
    <string name="scene_sve_result_content_description">Sve Result</string>
    <string name="scene_sve_say">Say &#8230;</string>
    <string name="scene_sve_phone_number">Your Phone Number</string>
    <string name="scene_sve_full_address">Your Full Address</string>
    <string name="scene_sve_full_name">Your Full Name</string>
    <string name="scene_sve_numbers">from 0 to 9</string>
    <string name="scene_sve_challenge_name">Challenge</string>
    <string name="scene_sve_challenge_grammar_initial">[#][#][#][#][#][#][#][#][#][#][#][#]</string>
    <string name="scene_sve_challenge_grammar">[#][#][#][#]</string>
    <string name="scene_enroll_content_description">ValidVoice Icon</string>
    <string name="scene_enroll_enroll_by_voice">Enroll By Voice</string>
    <string name="scene_enroll_enrolled_by_voice">Enrolled By Voice</string>
    <string name="scene_enroll_listening">LISTENING &#8230;</string>
    <string name="scene_enroll_say">Say &#8230;</string>
    <string name="scene_enroll_train">TRAINING &#8230;</string>
    <string name="scene_enroll_begin">Begin</string>
    <string name="scene_enroll_continue">Continue</string>
    <string name="scene_enroll_done">Done</string>
    <string name="scene_enroll_try_again">Try Again</string>
    <string name="scene_enroll_trained">Trained</string>
    <string name="scene_enroll_success">Success</string>
    <string name="scene_enroll_instructions_strict_form">To complete the enrollment, please answer the prompts that appear on the screen.</string>
    <string name="scene_enroll_instructions_confirm_enroll">Enrollment Complete. Now, let us start your first verification.</string>
    <string name="scene_enroll_instructions_confirm_training">Now, lets go through a set of training verifications.</string>
    <string name="scene_enroll_instructions_comolete_training">A few more training verifications and you are good to go.</string>
    <string name="scene_enroll_instructions_server_failure">There seems to be an issue with the Network Connection. Please try again later.</string>
    <string name="scene_enroll_instructions_result_failure">"Result Error Occurred [%s]. Try again later."</string>
    <string name="scene_enroll_instructions_speech_failure">We are unable to understand you. Please find a quieter environment and try again.</string>
    <string name="scene_train_instructions_speech_failure">Training Unsuccessful. Please contact v2Verify for further assistance.</string>
    <string name="scene_verify_content_description">ValidVoice Icon</string>
    <string name="scene_verify_verify_by_voice">Verify by Voice</string>
    <string name="scene_verify_verified_by_voice">Verified by Voice</string>
    <string name="scene_verify_listening">Listening &#8230;</string>
    <string name="scene_verify_say">Say &#8230;</string>
    <string name="scene_verify_instructions_server_failure">Server Error Occurred [%s]. Try again later.</string>
    <string name="scene_verify_instructions_result_failure">"Result Error Occurred [%s]. Try again later."</string>
    <string name="scene_enroll_instructions_not_enough_speech_failure">Unable to Enroll, Please try again later.</string>
    <string name="scene_verify_instructions_speech_tip">Tip</string>
    <string name="scene_verify_instructions_speech_failure">Please try again from a quieter location. Be sure to hold the device closer to your mouth and speak louder.</string>
    <string name="scene_verify_calibrate_speech_failure">Calibrating microphone for background noise.</string>
    <string name="scene_background_failure">Microphone detected the background is too noisy. Please make sure your sorrounding is quiet and try again.</string>
    <string name="scene_intent_failure">Network Connection Problem.Please refresh the browser and Try again.</string>
    <string name="scene_lockedout_failure" translatable="false">you have been locked out of the system. Please contact the customer support for assistance</string>
    <string name="scene_verify_number_result_content_description">Verification Number Result</string>
    <string name="scene_verify_name_result_content_description">Verification Name Result</string>
    <string name="scene_verify_add_new_device">Enter a nickname below to pair this mobile device with this browser. This eliminates the need to scan a QR-CODE.</string>
    <string name="scene_verify_add_new_device_next">Next</string>
    <string name="scene_accounts_company_icon_description">Company Icon</string>
    <string name="scene_accounts_details">Account Details</string>
    <string name="scene_accounts_company">Company</string>
    <string name="scene_accounts_company_user">User</string>
    <string name="scene_accounts_date_linked">Date Linked</string>
    <string name="scene_accounts_date_last_signed_in">Date Last Signed In</string>
    <string name="scene_accounts_last_signed_in_from">Last Signed In From</string>
    <string name="scene_device_details">Device Details</string>
    <string name="scene_device_type">Type</string>
    <string name="scene_device_date_added">Date Added</string>
    <string name="scene_device_date_last_used">Date Last Used</string>
    <string name="scene_device_ip_address">Last Known IP Address</string>
    <string name="scene_device_id">Device Id</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
</resources>