<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoShadowHeight="0dp"
    sothree:umanoPanelHeight="35dp"
    sothree:umanoDragView="@+id/drag_view"
    sothree:umanoScrollableView="@+id/historyListView"
    >

    <!-- MAIN CONTENT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|center_horizontal">

            <ImageView
                tools:src="@mipmap/ic_launcher"
                style="@style/MainContentIcon"
                android:id="@+id/account_company_icon"
                android:layout_height="72dp"
                android:layout_width="72dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/scene_accounts_company_icon_description"
                />

            <TextView
                tools:text="v2OnDemand"
                style="@style/MainContentHeader"
                android:id="@+id/account_company_name" />

            <TextView
                tools:text="tarsylas"
                style="@style/MainContentInfo"
                android:id="@+id/account_name" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FloatingContentHeader"
                    android:layout_height="35dp"
                    android:text="@string/scene_accounts_details" />

                <View style="@style/HorizontalDivider" />

                <TextView
                    style="@style/FloatingContentSubHeading"
                    android:text="@string/scene_accounts_company" />

                <TextView
                    android:id="@+id/account_company"
                    style="@style/FloatingContentDetail"
                    tools:text="v2OnDemand" />

                <View style="@style/FloatingHorizontalDivider" />

                <TextView
                    style="@style/FloatingContentSubHeading"
                    android:text="@string/scene_accounts_company_user" />

                <TextView
                    android:id="@+id/account_company_user"
                    style="@style/FloatingContentDetail"
                    tools:text="tarsylas" />

                <View style="@style/FloatingHorizontalDivider" />

                <TextView
                    style="@style/FloatingContentSubHeading"
                    android:text="@string/scene_accounts_date_linked" />

                <TextView
                    android:id="@+id/account_date_linked"
                    style="@style/FloatingContentDetail"
                    tools:text="2017-03-24" />

                <View style="@style/FloatingHorizontalDivider" />

                <TextView
                    style="@style/FloatingContentSubHeading"
                    android:text="@string/scene_accounts_date_last_signed_in" />

                <TextView
                    android:id="@+id/account_date_last_signed_in"
                    style="@style/FloatingContentDetail"
                    tools:text="2017-03-24" />

                <View style="@style/FloatingHorizontalDivider" />

                <TextView
                    style="@style/FloatingContentSubHeading"
                    android:text="@string/scene_accounts_last_signed_in_from" />

                <TextView
                    android:id="@+id/account_last_signed_in_from"
                    style="@style/FloatingContentDetail"
                    tools:text="Office PC (127.0.0.1)" />

                <View
                    style="@style/FloatingHorizontalDivider" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <!-- SLIDING CONTENT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/drag_view">

        <View style="@style/HorizontalDivider" />

        <TextView
            style="@style/FloatingContentHeader"
            android:layout_height="35dp"
            android:text="@string/navigation_drawer_scene_history"/>

        <View style="@style/HorizontalDivider" />

        <ListView
            android:id="@+id/historyListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="?attr/textColor"
            android:dividerHeight="4dp">
        </ListView>

    </LinearLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>