<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/gradientColor"
    android:animateLayoutChanges="true"
    tools:context="com.validvoice.voxidem.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_card"
        android:layout_margin="10dp">

        <TextView
            style="@style/CardSectionHeader"
            android:id="@+id/device_add_label"
            android:layout_height="90dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="13sp"
            android:text="@string/scene_verify_add_new_device"
            />

        <View style="@style/CardSectionDivider" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/scene_home_device_add_nickname_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/scene_home_device_add_nickname_hint"
            android:gravity="center_vertical"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/scene_home_device_add_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/scene_home_device_add_nickname_hint"
                android:inputType="textPersonName"
                />

        </android.support.design.widget.TextInputLayout>

        <com.steelkiwi.library.ui.SeparateShapesView
            android:id="@+id/scene_home_device_add_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:layout_gravity="center"
            app:ssv_all_text_caps="true"
            app:ssv_done_drawable="@drawable/ic_success"
            app:ssv_left_shape_drawable="@drawable/transparent_background"
            app:ssv_right_shape_drawable="@drawable/transparent_background"
            app:ssv_left_shape_text="@string/general_no"
            app:ssv_right_shape_text="@string/general_yes"
            app:ssv_text_color="?attr/buttonText"
            app:ssv_text_size="14sp"
            app:ssv_single_shape="false"
            app:ssv_auto_restore="true"
            />

    </LinearLayout>

</LinearLayout>